<resources>
    <string name="app_name">myMusicalStructure</string>
    <string name="title_activity_content_main2">Content_main2</string>
    <string name="main_page">main_page</string>
    <string name="main_activity"> Main Activity </string>
    <string name="Albums"> Albums </string>
    <string name="playing"> Playing </string>
    <string name="Payment"> Payment </string>
    <string name="Go_to_payment_page"> Go to payment page </string>
    <string name="Go_to_main_page"> Go to main page </string>
    <string name="Go_to_playing_page"> Go to playing page </string>
    <string name="Go_to_albums_page"> Go to albums page </string>

    <string name="pre"><![CDATA[<<]]></string>
    <string name="playing_desc">here is playing screen,you can move next or back of song you can also stop it </string>
    <string name="albums_desc">Here is an album list screen. This screen should support scrolling. You can add an album to the playlist </string>
    <string name="payment_desc"> Android Pay enables simple and secure purchases of physical
        goods and services in Android apps, and eliminates the need to manually enter payment and shipping information.
    \nThe API provides all the Java methods you need to implement your payment process flow, including:\n
-create an Android Pay buy button.\n
 -request and receive encrypted shipping and payment information about the user \n
-allow the user to change or update their information. \n
-execute a transaction.\n
\n methods you can use to implement an example payment flow.\n

\n Java methods\n

\nPackages:\n
com.google.android.gms.wallet contains the Wallet Client for Google Play Services.\n
com.google.android.gms.wallet.fragment contains the Buy Button display and interfaces.\n

\nPublic classes and interface:\n
\n class MaskedWalletRequest:\n	Use the MaskedWalletRequest Builder to create a masked, or partially hidden, payment card number, along with shipping address if requested.
class FullWalletRequest:	Use the FullWalletRequest Builder to get the full credentials for the Android Pay payment transaction.
\n class WalletFragment:\n	Provides a simple way to place and interact with a purchase button in the app UI.
\n class PaymentMethodTokenizationParamters:\n	Parameters the app must provide to a Wallet Request in order to tokenize the credit card selected by the user. The payment processor may require specific parameters for their gateway.
\n interface Wallet.Payments:\n	Interface to the Wallet payment flow APIs, used to check if the user can pay with Android Pay and to load a Masked or Full Wallet.
\n interface WalletConstants:\n	A collection of constant values.</string>


</resources>
