<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingTop="140dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/main_page"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:paddingBottom="10dp"
        android:text="@string/main_activity"
        android:textSize="15sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/play_in_main_page"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/playing"
        android:textSize="15sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/albums_in_main_page"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:text="@string/Albums"
        android:textSize="15sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/payment_in_main_page"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Payment"
        android:textSize="15sp"
        android:textStyle="normal" />
</LinearLayout>